# nftgen

./: .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .yamllint  CLAUDE-WEB-PROBLEM?.md  CLAUDE.md  DECISIONS.md  DEPLOYMENT.md  DESIGN.md  LICENSE  Makefile  NOTICE  PLAN.md  RAW.md  README.md  TODO.md  nftables-optimization-ideas.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  researcher.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
.trunk/: trunk.yaml
docs/: authoring.md  best-practices.md  capabilities.md  concat-authoring.md  concatenations.md  implementation-phases.md  maps.md  policy-design.md  progress.md  reference-fleet.md  sets-and-performance.md  step1-review.md  testing-plan.md
docs/automation/: README.md  dedup-ordering.md  family-split.md  match-syntax.md  not-automated.md  set-type.md
example-fleet/: README.md
example-fleet/definitions/: interfaces.yaml  networks.yaml  services.yaml
example-fleet/policies/hosts/: br1-r.yaml  br2-r.yaml  hq-r.yaml
example-fleet/sites/: br1.yaml  br2.yaml  hq.yaml
example-poc/: README.md
example-poc/definitions/: interfaces.yaml  services.yaml
example-poc/definitions/networks/: bogons.yaml  fleet.yaml
example-poc/policies/hosts/: poc-gw1.yaml  poc-gw2.yaml
example-poc/sites/: site1.yaml  site2.yaml
example/def/: interfaces.yaml  networks.yaml  services.yaml
example/definitions/: interfaces.yaml  networks.yaml  services.yaml
example/sites/: site1.yaml  site2.yaml
nftgen/: __init__.py  __main__.py  cli.py  definitions.py  generate.py  ir.py  rules.py  validate.py
tests/: test_behavioral.py  test_build.py  test_concat.py  test_counters.py  test_definitions.py  test_fleet.py  test_fleet_behavioral.py  test_flowtables.py  test_generate.py  test_ir_sets.py  test_keyword_guard.py  test_poc.py  test_resolve.py  test_rules.py  test_smoke.py  test_statements.py  test_tcp_flags.py  test_validate.py  test_vmaps.py
tests/behavioral/: agent.py  netns.py
tests/golden/: gateway.nft  router1.nft  router2.nft
(+69 files in other folders)
