[project]
name = "nftgen"
version = "0.0.1"
description = "A small, nftables-only firewall-as-code generator (YAML -> .nft)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aeglanee" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
nftgen = "nftgen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nftgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
