[project]
name = "nftgen"
version = "0.5.0"
description = "A small, nftables-only firewall-as-code generator (YAML -> .nft)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aeglanee" }]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = [
  "pytest>=8.0",
  "ruff==0.15.20",    # keep in sync with .pre-commit-config.yaml
  "yamllint==1.38.0", # keep in sync with .pre-commit-config.yaml
  "pre-commit>=4.0",
]

[project.scripts]
nftgen = "nftgen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nftgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "C4",  # flake8-comprehensions
  "RET", # flake8-return
  "PL",  # pylint
  "S",   # flake8-bandit
]
ignore = [
  "E501",    # formatter owns line-length wrapping
  "PLR2004", # magic values are fine in tests and rendering tables
]

[tool.ruff.lint.per-file-ignores]
# pytest asserts; the netns harness runs fixed PATH-resolved commands
# (ip/nft/unshare) and binds inside throwaway namespaces
"tests/**" = ["S101", "S603", "S607", "S104"]
